# oai_mcp_code_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  chainlit.md  mkdocs.yml  pyproject.toml
docs/: index.md  usage.md
src/mcp_code_agent/: app.py  main.py
src/mcp_code_agent/agent/: agent.py  helpers.py
src/mcp_code_agent/custom_types/: tool.py
src/mcp_code_agent/mcp_clients/: client.py  mcp_sse_client.py  mcp_stdio_client.py  sse_client.py  too_typesl.py
src/servers/: weather.py
